derive-ex-tests/tests/compile_fail/compare_op/partial_ord_field_not_impl_partial_ord.rs
use derive_ex::derive_ex;

#[derive(PartialEq)]
struct NotPartialOrd;

#[derive_ex(PartialOrd, PartialEq)]
struct X {
    x: NotPartialOrd,
}

fn main() {}
